[workspace]

resolver = "2"

members = [
    "colour_math",
    "colour_math_cairo",
    "colour_math_derive",
    "colour_math_gtk",
    "colour_math_gui_gtk",
    "epaint",
    "epaint_derive",
    "epaint_gtk",
    "apaint_gtk",
    "apaint",
    "epaint_gtk_gui",
    "wpca_gtk", "mcmmtk_gtk",
]
