[package]
name = "epaint_gtk_gui"
version = "0.1.0"
edition = "2024"

[features]
default = []
paints_have_ids = []
taegeted_mixtures = []
palette_samples = []

[dependencies]

#pw_gtk_ext = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
pw_gtk_ext = { path = "../pw_gtk_ext" }
colour_math = { path = "../colour_math" }
colour_math_derive = { path = "../colour_math_derive" }

[dependencies.epaint]
path = "../epaint"
features = ["targeted_mixtures"]

#epaint_derive = { path = "../epaint_derive" }

[dependencies.epaint_gtk]
path = "../epaint_gtk"
features = ["targeted_mixtures", "palette_samples"]
#features = ["palette_samples"]
